--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "First build for Pyrodev",
   "main": "index.js",
   "scripts": {
-    "start":"node scripts/web-server.js",
+    "start": "node scripts/web-server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -18,5 +18,7 @@
   },
   "homepage": "https://github.com/pajenkin/pyrodev",
   "dependencies": {
+    "angular": "^1.3.12",
+    "angular-route": "^1.3.12"
   }
 }
