--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/pajenkin/pyrodev",
   "dependencies": {
     "angular": "^1.3.12",
-    "angular-route": "^1.3.12"
+    "angular-route": "^1.3.12",
+    "font-awesome": "^4.3.0"
   }
 }
