--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "angular": "^1.3.12",
     "angular-route": "^1.3.12",
-    "font-awesome": "^4.3.0"
+    "font-awesome": "^4.3.0",
+    "jquery": "^2.1.3"
   }
 }
